fix: Made body size 100% as it was not fitting page

--- a/frontend/src/styling/Waiter.css
+++ b/frontend/src/styling/Waiter.css
@@ -22,9 +22,8 @@
 
 .waiter_menu_table{
     display: block;
-    margin-left: 35%;
-    margin-right: 35%;
-    width: 40%;
+    height: auto;
+    width: auto;
 }
 
 .waiter_button_link{
